# nexusx

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  start_all.sh
.specify/: extensions.yml  feature.json
benchmarks/: after_bfs.txt  after_bfs_mysql.txt  baseline.txt  baseline_mysql.txt  bench_graphql.py
changelog/: index.html
clean-architecture-comparison/: index.html
docs/: ash-vs-nexusx.md  changelog.md  clean-architecture-comparison.md  clean-architecture-comparison.zh.md  index.md  index.zh.md
feature-highlights/: index.html
scripts/: check-ci.sh  preset-reinstall.sh
skill/: SKILL.md  skill.md  spec-management.md
skill/template/: pyproject.toml
skill/template/src/: main.py  models.py
skill/template/src/service/sprint/: service.py
skill/template/src/service/task/: dtos.py  service.py
skill/template/src/service/user/: dtos.py  service.py  spec.md
skill/template/tests/: conftest.py  test_sprint_methods.py  test_task_methods.py  test_user_methods.py
speckit-preset/: LICENSE  README.md  preset.yml
tests/: test_argument_types.py  test_compose_executor.py  test_compose_introspect.py  test_compose_mcp_server.py  test_compose_old_api_removed.py  test_compose_recursive_types.py  test_compose_schema.py  test_definesubset_basemodel.py  test_demo_final.py  test_demo_standard_queries.py  test_grpc.py  test_handler.py  test_input_types.py  test_introspection.py  test_loader_pagination.py  test_loader_registry.py  test_mcp.py  test_mcp_pagination_guard.py  test_mcp_schema_enhanced.py  test_optional_list_param.py  (+14 more)
(+263 files in other folders)
