[project]
name = "nexusx-template"
version = "0.1.0"
description = "nexusx 四阶段开发模板"
requires-python = ">=3.12"
dependencies = [
    "nexusx>=3.2",
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "aiosqlite",
    "fastmcp>=3.1,<3.2",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
# 持久化场景（file sqlite / docker pg / docker mysql / external）按需启用，
# 详见 phases/phase1.md Step 0-7 决策树
persist = [
    "alembic>=1.13",
]
persist-pg = ["nexusx-template[persist]", "asyncpg"]
persist-mysql = ["nexusx-template[persist]", "aiomysql"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
